--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,14 @@
     "webNavigation",
     "search"
   ],
+  "commands": {
+    "open-tab": {
+      "suggested_key": {
+        "default": "Ctrl+T"
+      },
+      "description": "Open Vimium new tab page"
+    }
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
