--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Vimium",
+  "name": "Vimium 🟤🔴🟠🟡🟢🔵🟣⚫⚪️ IWE",
   "version": "2.3",
   "description": "The Hacker's Browser. Vimium provides keyboard shortcuts for navigation and control in the spirit of Vim.",
   "icons": { "16": "icons/icon16.png", "48": "icons/icon48.png", "128": "icons/icon128.png" },
@@ -36,7 +36,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [
+      "js": [ "lib/dom_log.js",
         "lib/types.js",
         "lib/utils.js",
         "lib/keyboard_utils.js",
